[package]
name = "rad"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
radix-engine-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.0.1" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.0.1" }
bip39 = "2.0.0"
thiserror = "1.0.50"
qrencode = "0.14.0"
base64 = "0.21.5"
hex = "0.4.3"
nu-ansi-term = "0.49.0"
clap = { version = "4.4.7", features = ["derive"] }
ansi-escapes = "0.1.1"
unindent = "0.2.3"
const_format = "0.2.32"
primitive-types = "0.12.2"
default-args = "1.0.0"
rayon = "1.8.0"
hdwallet = "0.4.1"

[dev-dependencies]
criterion = "0.5.1"

[[bin]]
name = "rad"
test = false

[[bench]]
name = "my_benchmark"
harness = false

[profile.test]
opt-level = 3
debug = true
debug-assertions = false
panic = "abort"
overflow-checks = false
lto = false
incremental = false
codegen-units = 16
rpath = false

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "symbols"
lto = true
debug-assertions = false
overflow-checks = false
debug = true

[profile.bench]
debug = true
