[package]
name = "rad"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-escapes = "0.1.1"
anstream = "0.6.8"
base64 = "0.21.5"
bip39 = "2.0.0"
clap = { version = "4.5.28", features = ["derive"] }
const_format = "0.2.32"
default-args = "1.0.0"
hdwallet = "0.4.1"
hex = "0.4.3"
nu-ansi-term = "0.49.0"
primitive-types = "0.12.2"
qrencode = "0.14.0"
radix-common = "1.3.0"
rand = "0.7.3"
rayon = "1.8.0"
scrypto = "1.3.0"
thiserror = "1.0.50"
unindent = "0.2.3"

[dev-dependencies]
anstream = "0.6.8"
criterion = "0.5.1"

[[bin]]
name = "rad"
test = false

[[bench]]
name = "my_benchmark"
harness = false

[profile.test]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = false
incremental = false
codegen-units = 16
rpath = false

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "symbols"
lto = true
debug-assertions = false
overflow-checks = false
debug = true

[profile.bench]
debug = true
